[package]
name = "appleargs"
version = "0.1.1"
edition = "2021"
authors = ["BlackHoleFox <blackholefoxdev@gmail.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/BlackHoleFox/appleargs"
description = "Obtain the current process' apple arguments"
keywords = ["apple", "darwin", "macos", "args", "applep"]
categories = ["os::macos-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
empty-on-unsupported = []

[dependencies]

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
